# codename_hunter

./: .coverage  .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  analyze_html.py  config.ini  hunter.py  output.md  patterns.md  progress.md  pyproject.toml  refactor_plan.md  requirements.txt  setup.py  temp_sdk_doc.html  test_extraction.py  together_docs.md
.github/: RELEASE_TEMPLATE.md  release.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: hunter-cicd.yml  python-package.yml
codename_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
config/: config.ini  config.ini.template
hunter/: __main__.py  constants.py  formatters.py  main.py  parsers.py  utils.py
hunter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hunter/utils/: __init__.py  ai.py  errors.py
src/: constants.py  formatters.py  main.py  parsers.py  utils.py
tests/: conftest.py  test_async_operations.py  test_formatters.py  test_main.py  test_parsers.py  test_utils.py
